--- a/php/74/Dockerfile
+++ b/php/74/Dockerfile
@@ -3,7 +3,24 @@ FROM php:7.4-fpm
 
 ENV PATH /usr/local/go/bin:/root/.composer/vendor/bin:$PATH
 
+ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
+
 RUN apt update && apt install -y --no-install-recommends \
+  nano \
+  net-tools \
+  ssh \
+  msmtp \
+  sudo \
+  supervisor \
+  unzip \
+  zsh \
+  fonts-powerline \
+  powerline
+
+RUN set -eux; \
+	\
+  savedAptMark="$(apt-mark showmanual)"; \
+  apt update && apt install -y --no-install-recommends \
     cron \
     git \
     gnupg \
@@ -18,27 +35,35 @@ RUN apt update && apt install -y --no-install-recommends \
     libwebp-dev \
     libxml2-dev \
     libxslt-dev \
-    nano \
-    net-tools \
-    ssh \
-    msmtp \
-    sudo \
-    supervisor \
-    unzip \
     libzip-dev \
     libz-dev \
-    zsh \
-    fonts-powerline \
-    powerline \
-  && yes '' | pecl install -f memcached redis xdebug mcrypt \
-  && docker-php-ext-install -j$(nproc) bcmath calendar exif intl mysqli opcache pdo_mysql soap xsl zip\
-  && docker-php-ext-enable mcrypt memcached redis xdebug\
-  && apt clean \
-  && rm -rf /var/lib/apt/lists/*
+    ; \
+  yes '' | pecl install -f memcached redis xdebug mcrypt; \
+  docker-php-ext-install -j$(nproc) bcmath calendar exif intl mysqli opcache pdo_mysql soap xsl zip; \
+  docker-php-ext-enable mcrypt memcached redis xdebug; \
+  docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp; \
+  docker-php-ext-install -j$(nproc) gd; \
+  chmod +x /usr/local/bin/install-php-extensions && sync; \
+  install-php-extensions ldap ioncube_loader; \
+  \
+	cd /; \
+	docker-php-source delete; \
+  \
+  apt clean; \
+  apt-mark auto '.*' > /dev/null; \
+  [ -z "$savedAptMark" ] || apt-mark manual $savedAptMark; \
+	find /usr/local -type f -executable -exec ldd '{}' ';' \
+		| awk '/=>/ { print $(NF-1) }' \
+		| sort -u \
+		| xargs -r dpkg-query --search \
+		| cut -d: -f1 \
+		| sort -u \
+		| xargs -r apt-mark manual \
+	; \
+  apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
+  rm -rf /var/lib/apt/lists/*
 
 # Configure GD Library
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
-  && docker-php-ext-install -j$(nproc) gd
 
 # Install Composer
 RUN curl --silent --show-error https://getcomposer.org/installer | php \
@@ -50,8 +75,8 @@ RUN curl -L -o /usr/bin/mhsendmail https://github.com/mailhog/mhsendmail/release
   && chmod +x /usr/bin/mhsendmail
 
 # Setup Crons
-RUN touch /root/custom_crontab \
-  && /usr/bin/crontab -u www-data /root/custom_crontab
+# RUN touch /root/custom_crontab \
+  # && /usr/bin/crontab -u www-data /root/custom_crontab
 
 # Update site's directory permissions
 RUN chown -R www-data /var/www/
@@ -62,10 +87,6 @@ COPY ./conf/custom.ini /usr/local/etc/php/conf.d/zza-custom.ini
 # PHP-FPM and CRON supervisord config
 COPY ./conf/supervisord.conf /etc/supervisor/supervisord.conf
 RUN touch /etc/supervisor/supervisord.pid
-
-ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
-RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions ldap ioncube_loader
 
 ARG PHPV=74
 INCLUDE+ ./common/shell.Dockerfile
