--- a/php/56-alpine/Dockerfile
+++ b/php/56-alpine/Dockerfile
@@ -1,6 +1,9 @@
 # syntax = edrevo/dockerfile-plus
 FROM php:5.6-fpm-alpine
 
+LABEL org.opencontainers.image.source "https://github.com/phpdocdev/docdev-cli"
+LABEL org.opencontainers.image.description "Alpine PHP 5.6 FPM"
+
 ENV PATH /usr/local/go/bin:/root/.composer/vendor/bin:$PATH
 
 ENV PHPIZE_DEPS \
