xhprof ext and gui, added monit

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -8,6 +8,7 @@ RUN echo "LoadModule vhost_alias_module modules/mod_vhost_alias.so" >> /usr/loca
     && echo "LoadModule ssl_module modules/mod_ssl.so" >> /usr/local/apache2/conf/httpd.conf \
     && echo "LoadModule rewrite_module modules/mod_rewrite.so" >> /usr/local/apache2/conf/httpd.conf \
     && echo "LoadModule proxy_module modules/mod_proxy.so" >> /usr/local/apache2/conf/httpd.conf \
+    && echo "LoadModule status_module modules/mod_status.so" >> /usr/local/apache2/conf/httpd.conf \
     && echo "LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so" >> /usr/local/apache2/conf/httpd.conf
 
 COPY ./sites /usr/local/apache2/conf/sites/
