--- a/apache/sites/localhost.conf
+++ b/apache/sites/localhost.conf
@@ -1,7 +1,6 @@
 # Global Config
 DocumentRoot /var/www/html
-DirectoryIndex index.php 
-ServerAdmin tech@pvtl.io
+DirectoryIndex index.php
 
 # Environment Variable to determine which server
 SetEnv APPLICATION_ENV "1"
@@ -40,6 +39,11 @@ SetEnv APPLICATION_ENV "1"
     <FilesMatch "\.php$">
       SetHandler proxy:fcgi://php:9000
     </FilesMatch>
+
+    <Location /server-status>
+        SetHandler server-status
+        Require all granted
+    </Location>
 </VirtualHost>
 
 
