--- a/php/74/Dockerfile
+++ b/php/74/Dockerfile
@@ -89,6 +89,11 @@ COPY ./conf/supervisord.conf /etc/supervisor/supervisord.conf
 RUN touch /etc/supervisor/supervisord.pid
 
 ARG PHPV=74
+
 INCLUDE+ ./common/shell.Dockerfile
 
-CMD ["/usr/bin/supervisord"]
+INCLUDE+ ./common/xhprof.Dockerfile
+
+COPY ./conf/global.php /home/dev/global.php
+
+CMD ["sudo", "php-fpm", "-g", "/var/run/php-fpm.pid"]
