--- a/php/56/Dockerfile
+++ b/php/56/Dockerfile
@@ -84,4 +84,8 @@ RUN touch /etc/supervisor/supervisord.pid
 ARG PHPV=56
 INCLUDE+ ./common/shell.Dockerfile
 
-CMD ["/usr/bin/supervisord"]
+INCLUDE+ ./common/xhprof.Dockerfile
+
+COPY ./conf/global.php /home/dev/global.php
+
+CMD ["sudo", "php-fpm", "-g", "/var/run/php-fpm.pid"]
