--- a/php/72/Dockerfile
+++ b/php/72/Dockerfile
@@ -70,4 +70,8 @@ RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
 ARG PHPV=72
 INCLUDE+ ./common/shell.Dockerfile
 
-CMD ["/usr/bin/supervisord"]
+INCLUDE+ ./common/xhprof.Dockerfile
+
+COPY ./conf/global.php /home/dev/global.php
+
+CMD ["sudo", "php-fpm", "-g", "/var/run/php-fpm.pid"]
