--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -42,6 +42,8 @@ jobs:
           filters: |
             changed:
               - ${{format('php/{0}/**', matrix.TAGS)}}
+              - php/conf/**
+              - php/common/**
       - name: Run Buildx
         if: steps.filter.outputs.changed == 'true'
         run: |
