--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,18 +20,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 100
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-        with:
-          buildx-version: latest
-          qemu-version: latest
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -40,6 +28,20 @@ jobs:
               - ${{format('php/{0}/**', matrix.TAGS)}}
               - php/conf/**
               - php/common/**
+      - name: Set up Docker Buildx
+        if: steps.filter.outputs.changed == 'true'
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      - name: Login to GitHub Container Registry
+        if: steps.filter.outputs.changed == 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Buildx
         if: steps.filter.outputs.changed == 'true'
         continue-on-error: true
@@ -61,24 +63,26 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 100
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
-        with:
-          buildx-version: latest
-          qemu-version: latest
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: dorny/paths-filter@v2
         id: filter
         with:
           filters: |
             changed:
               - ${{format('{0}/**', matrix.TAGS)}}
+      - name: Set up Docker Buildx
+        if: steps.filter.outputs.changed == 'true'
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      - name: Login to GitHub Container Registry
+        if: steps.filter.outputs.changed == 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Buildx
         if: steps.filter.outputs.changed == 'true'
         continue-on-error: true
