Undo goreleaser universal binary

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,9 @@ name: publishmultipledockerimage
 on:
   push:
     branches: ['master']
+    paths-ignore:
+      - 'go/**'
+      - .github/workflows/go-release.yml
       
 env:
   REGISTRY: ghcr.io
