--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,6 +6,9 @@ builds:
     goos:
       - linux
       - darwin
+    ignore:
+      - goos: darwin
+        goarch: arm64
     ldflags:
       - -s -w -X main.Version={{.Version}}
     binary: docdev_{{ .Os }}_{{ .Arch }}
@@ -25,6 +28,7 @@ release:
   github:
     owner: phpdocdev
     name: docdev
+  mode: replace
 archives:
 - format: binary
   name_template: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
