74, disable monit, apache logging

--- a/apache/sites/localhost.conf
+++ b/apache/sites/localhost.conf
@@ -19,6 +19,11 @@ RedirectMatch 404 /\.env
 
 SetEnv APPLICATION_ENV "1"
 
+ErrorLog /dev/stderr
+#TransferLog /dev/stdout
+
+#LogFormat "%h %l %u %t \"%r\" %>s %b" combined
+#CustomLog /var/log/apache2 combined
 
 <Directory /var/www/html/*/public>
     Options -Indexes +FollowSymLinks
