--- a/apache/sites/localhost.conf
+++ b/apache/sites/localhost.conf
@@ -19,10 +19,12 @@ RedirectMatch 404 /\.env
 
 SetEnv APPLICATION_ENV "1"
 
+LogLevel debug rewrite:trace8
 ErrorLog /dev/stderr
-#TransferLog /dev/stdout
+TransferLog /dev/stdout
 
-#LogFormat "%h %l %u %t \"%r\" %>s %b" combined
+# LogFormat "%h %l %u %t "%r" %>s %b "%{Referer}i" "%{User-agent}i"" combined
+LogFormat "%h %l %u %t \"%r\" %>s %b" combined
 #CustomLog /var/log/apache2 combined
 
 <Directory /var/www/html/*/public>
